# CMake

./: .gitignore  README.md
Cmake/: CMakeLists.txt  hello.c  swap.c
Cmake-v2/: main.c
Cmake-v2/inc/: test_include.h
Cmake-v2/src/: test_source.c
Test-v1/: CMakeLists.txt  main.c  readme.md
Test-v2/: CMakeLists.txt  main.c  readme.md
Test-v2/src/: test_source2.c
cmake01/: CMakeLists.txt  README.md  main.cpp
cmake02/: CMakeLists.txt  README.md
cmake03/: README.md
